# kkmlmanager

./: README.md  pyproject.toml  setup.py
kkmlmanager/: __init__.py  calibration.py  eval.py  features.py  manager.py  models.py  optuna.py  procs.py  regproc.py  sampling.py
kkmlmanager/util/: __init__.py  com.py  dataframe.py  logger.py  numpy.py
tests/: preprocessing.py  test_calibration.py  test_chainmodel.py  test_correlation.py  test_procs.py  test_regproc.py  test_train_cls.py  test_train_rank.py  test_train_reg.py  train_cls.py  train_reg.py
