[project]
name = "kkmlmanager"
version = "1.3.3"
requires-python = ">= 3.12.0"
description = "usefule library for ML (mainly for table data)."
dependencies = [
    'kkgbdt @ git+https://github.com/kazukingh01/kkgbdt.git@3602b56d9933bbfb4c6b3ed28b41b698a86a4e4f',
    'matplotlib==3.9.4',
    'polars==1.18.0',
    'pyarrow>=18.1.0',
    'iterative-stratification==0.1.7',
    # 'torch==2.5.1+cpu', # pip install --extra-index-url https://download.pytorch.org/whl/cpu -e .
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kkmlmanager"]
