[project]
name = "kkmlmanager"
version = "1.3.9"
requires-python = ">= 3.12.0"
description = "usefule library for ML (mainly for table data)."
dependencies = [
    'kklogger @ git+https://github.com/kazukingh01/kklogger.git@f6ddcc099da0102a14a62d67bede1b1c30eaf839',
    'pandas==2.2.3',
    'numpy==2.2.1',
    'optuna==4.1.0',
    'matplotlib==3.9.4',
    'polars==1.18.0',
    'pyarrow>=18.1.0',
    'iterative-stratification==0.1.9',
    # 'torch==2.5.1+cpu', # pip install --extra-index-url https://download.pytorch.org/whl/cpu -e .
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kkmlmanager", "kkmlmanager.util"]
